# excel-fill-na

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CLI_SPEC.md  FUNCTIONAL_SPEC.md
src/excel_fill_na/: __init__.py  _archive.py  _models.py  _planning.py  _ranges.py  cli.py  core.py
src/excel_fillna/: __init__.py  _archive.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
tests/fixtures/: preserved_artifacts.xlsx
