[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-fill-na"
version = "0.1.1"
description = "Fill empty Excel cells inside a selected range, with optional vertical merge support."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "foxiris@gmail.com" }
]
dependencies = [
  "openpyxl>=3.1,<4",
]
keywords = ["excel", "openpyxl", "cli", "spreadsheet"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
fna = "excel_fill_na.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
